Modification des références de projet dans les fichiers HTML et README pour passer de "Lac de Cayre" à "Lac Privé", mise à jour des styles CSS pour améliorer la réactivité, ajout d'une nouvelle page pour le projet "Écosystème Lac Privé" et intégration d'une interface pour les études IA. Amélioration générale de la navigation et de l'expérience utilisateur sur mobile.

--- a/docs/config/projects.json
+++ b/docs/config/projects.json
@@ -3,7 +3,7 @@
     {
       "id": "projet-44ha",
       "title": "Projet 44 Hectares",
-      "location": "Fauillet/Gontaud-de-Nogaret (47)",
+      "location": "Lot-et-Garonne (47)",
       "description": "Valorisation durable d'une exploitation agricole familiale : agritourisme, énergies renouvelables et transmission générationnelle.",
       "icon": "🌾",
       "surface": "44 ha",
